2003-02-11  Patrice Dumas <dumas@centre-cired.fr>
	* Tests/Makefile.am, Tests/test.sh: changes to reflect change
	in directory name for the cvs manual from cvs to ccvs

2003-02-11  Patrice Dumas <dumas@centre-cired.fr>
	* texi2html.pl, texi2html.init: unused variables removed
	use_bibliography removed, lots of global variables made lexical.
	open renamed open_file to avoid clashing with perl builtin.
	remove sub init_input, the initialization is done in the 
	script itself.
	add meta http-equiv="Content-Type" tag for the charset
 	declaration.

2003-02-06  Patrice Dumas <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: some unused variables removed
	use_acc not used anymore, accents are always handled
	Remove a lot of global variables. Use global lexical or lexically
	scoped variables (with my) when possible. Pass variables as arguments
	when the function is in texi2html.init
	bugfixes: frame target is the top file, and not the toc file
	during pass1 some lines where pushed in @lines2 instead of @lines
	* Tests/test.sh: ignore CVS directory when doing diffs

2003-02-03  Patrice Dumas <dumas@centre-cired.fr>

	* texi2html.pl: Remove handling of setref which is a TeX macro. The 
	corresponding texinfo macro is anchor.
	Remove an unneeded protect_texi
	* configure.in, Makefile.am, Tests/test.sh, Tests/Makefile.am Tests/*:
	Files used for testing added, texinfo manuals and the html results for 
	some of the texinfo manuals

2003-01-30  Patrice Dumas <dumas@centre-cired.fr>

	* texi2html.pl: fix nesting of multi line style macros (previously,
	@kbd{@code{my
	thing}}
	became
	<kbd>my thing<kbd><code></code> (or something approaching)
	no style substitution is done in indexes (indexes are already good
	html). Added %sec2index which is undef for a section name not in index,
	1 if the section name is in index.
	the value of $docu_doc set if $T2H_OUT was set (option -o) wasn't 
	used to define docu_doc_file, thus the output file was the basename 